--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/webflux_demo
+amazon.dynamodb.endpoint=http://localhost:8000/
+amazon.aws.accesskey=jsa
+amazon.aws.secretkey=javasampleapproach
