--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,17 @@
 			<version>1.11.301</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-commons</artifactId>
+			<version>1.13.4.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>4.3.9.RELEASE</version>
+		</dependency>
+
 		<!--<dependency>-->
 		<!--<groupId>com.github.derjust</groupId>-->
 		<!--<artifactId>spring-data-dynamodb</artifactId>-->
